--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ header {
 	margin: 20px;
 	border: 8px solid #C0C0C0;
 }
+#cont {
+	margin: auto 20px;
+}
 .about {
 	width: 750px;
 	display: inline-block;
@@ -66,9 +69,9 @@ h4 {
 	display: inline-block;
 	background-color: #ECE5EC;
 	vertical-align: top;
-	margin: 10px;
+	margin: 10px 10px 0px 10px;
 	font-size: 15px;
-	height: 650px;
+	height: 450px;
 }
 /*.fiveE>img {
 	height: 220px;
@@ -90,17 +93,29 @@ h4 {
 	display: inline-block;
 	background-color: #407D62;
 	border-radius: 7px;
+	margin: 5px 25% 5px 35%;
 	padding: 5px;
 	border: 2px solid black;
-	 box-shadow: 2px 4px #1E1F1F;
+	box-shadow: 2px 4px #1E1F1F;
 }
 footer img {
 	width: 25px;
 	border-radius: 25px;
+	margin-left: 10px;
 }
+
 footer {
 	background-color: #F7F7F7;
+	text-align: center;
 }
-#cont {
-	margin: auto 20px;
+
+
+.bottSec {
+	width: 400px;
+	display: inline-block;
+	background-color: #ECE5EC;
+	vertical-align: top;
+	margin: 0px 10px 10px 10px;
+	font-size: 15px;
+	height: 200px;
 }
